@@ -314,6 +314,42 @@
      </li>
      
      <li>
+     <h3>Disgiunzioni non esclusive</h3>
+     <p>In inglese è frequente incontrare la forma "and/or" per indicare
+     la possibilità che due eventi possano o verificarsi entrambi oppure
+     che se ne verifichi almeno uno dei due, in quanto la disgiunzione 
+     "or" ha un significato di mutua esclusione (<code>EXOR</code>).</p>
+     <p>L'italiano, invece, deriva le proprie congiunzioni e disgiunzioni
+     dal latino, in cui erano presenti:</p>
+     <dl>
+       <dt>et, atque</dl>
+       <dd>congiunzione (<code>AND</code> logico)</dd>
+       <dt>vel</dt>
+       <dd>disgiunzione (<code>OR</code> logico)</dd>
+       <dt>aut ... aut ...</dt>
+       <dd>esclusione (<code>EXOR</code> logico)</dd>
+     </dl>
+
+     <p>Pertanto in italiano la forma "e/o" è da evitare, usando al suo posto
+     una semplice "o", mentre per esprimere la mutua esclusione è possibile 
+     impiegare la forma "o ... o ...".</p>
+
+     <dl>
+       <dt><samp>"you can do this and that"</samp></dt>
+       <dd><samp>"è possibile fare questo <strong>e</strong>
+       quello"</samp></dd>
+
+       <dt><samp>"you can do this or that"</samp></dt>
+       <dd><samp>"è possibile fare <strong>o</strong> questo
+       <strong>o</strong> quello"</samp></dd>
+
+       <dt><samp>"you can do this and/or that"</samp></dt>
+       <dd><samp>"è possibile fare questo <strong>o</strong>
+       quello"</samp></dd>
+     </dl>
+     </li>
+     
+     <li>
      <h3>Traduzione letterale</h3>
      <p>Compito del traduttore è di cercare di rimanere il più possibile 
      fedele all'originale: questo non significa necessariamente tradurre 
