@@ -1,3 +1,7 @@
+2005-09-05  Emanuele Aina <emanuele.aina@gmail.com>
+
+	* buona_traduzione.html: aggiunto paragrafo su "and/or"
+
 2005-08-31  Emanuele Aina <emanuele.aina@gmail.com>
 
 	* *.html: modificato pesantemente il markup per renderlo più chiaro
